cluster/apps/vimbin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vimbin
  namespace: vimbin
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: vimbin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vimbin
    spec:
      containers:
        - name: vimbin
          image: ghcr.io/containeroo/vimbin:v0.0.17
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            tcpSocket:
              port: http
            failureThreshold: 30
            periodSeconds: 3
            timeoutSeconds: 1
          livenessProbe:
            tcpSocket:
              port: http
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 3
          args:
            - serve
            - --listen-address=0.0.0.0:8080
            - --directory=/data
          volumeMounts:
            - name: data
              mountPath: /data
          resources: {}
      volumes:
        - name: data
          emptyDir: {}
