cluster/apps/vimbin/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vimbin
  namespace: vimbin
  annotations:
    cloudflare-operator.io/type: CNAME
    cloudflare-operator.io/content: ${BASE_DOMAIN}
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - vimbin.${BASE_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vimbin
          port: 8080
